Safari365 Prod/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PhotoBook_Tracking_Number__c</fullName>
        <inlineHelpText>Enter this from DHL (courrier) service as it will be automatically emailed to the client</inlineHelpText>
        <label>PhotoBook Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PhotoBook</label>
        <referenceTo>PhotoBook__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Photobook_Missing_Images__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set when not all images were uploaded.</description>
        <label>Photobook Missing Images</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photobook_Stage__c</fullName>
        <label>Photobook Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Loaded</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Started Loading</fullName>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Ready to be Printed</fullName>
                </value>
                <value>
                    <fullName>At Printers</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Client No Longer Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photobook_Title__c</fullName>
        <label>Photobook Title</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Photos_have_been_moved_to_X_Drive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photos have been moved to X-Drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_TL_Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary TL Quotation</label>
        <referenceTo>TL_Quotation__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_extra_photo_Filename__c</fullName>
        <description>Filename of photo shared on Facebook</description>
        <inlineHelpText>Filename of photo shared on Facebook</inlineHelpText>
        <label>Print extra photo Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_extra_photo_Shared_on_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This client has shared his best photograph on Facebook with us, print him an extra photo to be sent with the courier</inlineHelpText>
        <label>Print extra photo ( Shared on FB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quotation_count_stage_raiseinvoice__c</fullName>
        <label>Quotation count stage raiseinvoice</label>
        <summaryFilterItems>
            <field>Quotations__c.Quotation_Stage__c</field>
            <operation>equals</operation>
            <value>Raised Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Quotations__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ROE__c</fullName>
        <inlineHelpText>Legacy field, not part of the Ferret system</inlineHelpText>
        <label>ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referring Client Name</description>
        <inlineHelpText>NB to accurately capture - who was the client that referred this booking to Safari365? (Search their name in Salesforce. Create the client first in Salesforce if they do not exist)</inlineHelpText>
        <label>Referring Client Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Stage__c</fullName>
        <label>Review Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Loaded</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>De -Active</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roughing_it__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roughing it</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rwanda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rwanda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_escorted_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled escorted tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_drive_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self drive tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_Asking_For_Passengers_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Asking For Passengers Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serengeti_National_Park__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serengeti National Park</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Level_Severity__c</fullName>
        <inlineHelpText>Accurately record how severe the incident was (managers will be alerted accordingly)</inlineHelpText>
        <label>Incident Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low (Easily resolved issue, no need for followup)</fullName>
                </value>
                <value>
                    <fullName>Medium (Client agitated and marginally upset, Consultant to followup with client, Team Leader to be aware)</fullName>
                </value>
                <value>
                    <fullName>High (Client very upset, Team Leader to contact client to appease or escalate to management)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shark_cage_diving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shark cage diving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spa_and_rejuvenation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spa and rejuvenation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Itinerary_Notes__c</fullName>
        <label>Special Itinerary Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>4-star, good quality, good location mid-range accommodation.</inlineHelpText>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <label>Star Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Southern Destinations</fullName>
                </value>
                <value>
                    <fullName>African Safaris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Aservice_Description__c</fullName>
        <inlineHelpText>If you have had ANY Client Incident whilst travelling, it must be recorded here (especially if you are managing the emergency phone) Date the incident, give an accurate description and ensure you update the &quot;Incident Severity&quot; drop-down.</inlineHelpText>
        <label>Travelling Client Incident Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR_No__c</fullName>
        <label>TR No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_Great_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Great Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <formula>TravelEndDate__c - Arrival_Date__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nights__c</fullName>
        <formula>TravelEndDate__c -  Arrival_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TravelEndDate__c</fullName>
        <label>Travel End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Date_Options__c</fullName>
        <label>Travel Date Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Assigned dynamically</fullName>
                </value>
                <value>
                    <fullName>Flexible within 2 weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Insurance_Policy_Number__c</fullName>
        <label>Travel Insurance Policy Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Insurance_Policy_Provider__c</fullName>
        <label>Travel Insurance Policy Provider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Insurance_c__c</fullName>
        <label>Travel Insurance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Logic_UserName__c</fullName>
        <formula>$User.Travel_Logic_Username__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Logic UserName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uganda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uganda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>3-star, budget orientated clean and comfortable accommodation.</inlineHelpText>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Victoria_Falls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Victoria Falls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WETU_1__c</fullName>
        <label>WETU 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WETU_2__c</fullName>
        <label>WETU 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WETU_3__c</fullName>
        <label>WETU 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Waiver_Of_Liability_Date__c</fullName>
        <label>Waiver Of Liability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Of_Liability_Name__c</fullName>
        <label>Waiver Of Liability Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Of_Liability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver Of Liability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Walking_Safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Walking Safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_origin_2__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_origin__c</fullName>
        <label>Website originOLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web: safari365.com</fullName>
                </value>
                <value>
                    <fullName>Web: safari365.com.au</fullName>
                </value>
                <value>
                    <fullName>Web: southafrica365.com</fullName>
                </value>
                <value>
                    <fullName>Web:safari365.com.tur.br</fullName>
                </value>
                <value>
                    <fullName>Web: top5africa.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whale_watching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whale watching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Which_Gift_was_Sent__c</fullName>
        <inlineHelpText>@Consultant, tell us what gift the client wants? @Admin, once the gift is sent, record accurately exactly which gift was sent (so that we dont sent the same gift when they refer another client)</inlineHelpText>
        <label>Which Gift Sent/To Be Sent?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wildlife_Safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wildlife Safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkflowRun2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WorkflowRun2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkflowRun3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WorkflowRun3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkflowRun4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WorkflowRun4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zambia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zambia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zanzibar_and_Pemba__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zanzibar and Pemba</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hCreatedinTL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hCreatedinTL</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Arrival_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Gross_Profit__c</columns>
        <columns>GP__c</columns>
        <columns>Country_of_Residence__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Internal_Comments__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>lessThan</operation>
            <value>100</value>
        </filters>
        <label>All Opportunities (Managers View)</label>
        <sharedTo>
            <role>Finance</role>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Closed_Lost_Opportunities</fullName>
        <columns>Arrival_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Closed_Lost_Reason__c</columns>
        <columns>Internal_Comments__c</columns>
        <columns>Client_Comments__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Country_of_Residence__c</columns>
        <columns>Members_Club__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>My &quot;Closed Lost&quot; Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Won_Deal_Opportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Arrival_Date__c</columns>
        <columns>TravelEndDate__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Country_of_Residence__c</columns>
        <columns>Phone__c</columns>
        <columns>Members_Club__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won Deal,Closed Won - Cancelled</value>
        </filters>
        <label>My &quot;Closed Won Deal&quot; Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Arrival_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Gross_Profit__c</columns>
        <columns>GP__c</columns>
        <columns>Country_of_Residence__c</columns>
        <columns>Phone__c</columns>
        <columns>Members_Club__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Quotation,TL Quotation</value>
        </filters>
        <label>My &quot;Active Quoting&quot; Opportunities</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Arrival_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT($User.ByPassValidation__c),ISPICKVAL( StageName , &apos;Closed Won Deal&apos;), ISBLANK( Arrival_Date__c ))</errorConditionFormula>
        <errorDisplayField>Arrival_Date__c</errorDisplayField>
        <errorMessage>Travel Dates are required if this is a confirmed traveling client.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Currency_On_Client_Currency_Locke</fullName>
        <active>true</active>
        <description>The client currency can only be changed in Sales Force if the &apos;Client Currency Locked&apos; field is = False.</description>
        <errorConditionFormula>AND(ISCHANGED(Client_Display_Currency__c),Client_Currency_Locked__c == true,NOT($User.ByPassValidation__c))</errorConditionFormula>
        <errorMessage>The Client Currency cannot be changed as it is locked, please get approval from FX Manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( StageName  , &quot;Closed Lost&quot;),
OR( 
ISPICKVAL( Closed_Lost_Reason__c , &quot;&quot;)))</errorConditionFormula>
        <errorMessage>Please insert a closed lost reason ( and additional internal comments if possible)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Service_Support_Description</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($User.ByPassValidation__c),
ISPICKVAL(Service_Level_Severity__c ,&quot;Low (Easily resolved issue, no need for followup)&quot;),
OR( 
ISBLANK(Support_Aservice_Description__c)))</errorConditionFormula>
        <errorDisplayField>Service_Level_Severity__c</errorDisplayField>
        <errorMessage>Please detail the nature of the incident</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Service_Support_Description_2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($User.ByPassValidation__c),
ISPICKVAL(Service_Level_Severity__c ,&quot;Medium (Client agitated and marginally upset, Consultant to followup with client, Team Leader to be aware)&quot;),
OR( 
ISBLANK(Support_Aservice_Description__c)))</errorConditionFormula>
        <errorMessage>Error To be Written</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GP_Required</fullName>
        <active>true</active>
        <description>Need GP figures entered before MITB</description>
        <errorConditionFormula>AND( NOT($User.ByPassValidation__c),ISPICKVAL( StageName , &apos;Closed Won Deal&apos;), ISBLANK(Gross_Profit__c))</errorConditionFormula>
        <errorDisplayField>Gross_Profit__c</errorDisplayField>
        <errorMessage>Need GP figures entered before MITB</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Client_Currency</fullName>
        <active>true</active>
        <description>The Client Currency cannot be changed as this has been locked, please get approval from FX Manager.</description>
        <errorConditionFormula>AND(
NOT($User.ByPassValidation__c),
 Client_Currency_Locked__c == TRUE,
ISCHANGED(Client_Display_Currency__c),
OR(
ISPICKVAL(PRIORVALUE(Client_Display_Currency__c) , &quot;AUD&quot;),
ISPICKVAL(PRIORVALUE(Client_Display_Currency__c) , &quot;GBP&quot;),
ISPICKVAL(PRIORVALUE(Client_Display_Currency__c) , &quot;USD&quot;),
ISPICKVAL(PRIORVALUE(Client_Display_Currency__c) , &quot;EUR&quot;)
))</errorConditionFormula>
        <errorMessage>The Client Currency cannot be changed as this has been locked, please get approval from FX Manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Stage_ClosedWonDeal_Confirm</fullName>
        <active>true</active>
        <description>The opportunity Stage &quot;Closed Won Deal&quot; can only set when one of the Quotation is confirmed</description>
        <errorConditionFormula>AND( 
NOT($User.ByPassValidation__c), 
ISCHANGED(StageName), 
ISPICKVAL(StageName,&quot;Closed Won Deal&quot;), 
Confirmed_Quote_is_in_Travelogic__c = False, 
Confirmed_Quotation_Count__c &lt;1 

)</errorConditionFormula>
        <errorMessage>The opportunity Stage &quot;Closed Won Deal&quot; can only set when one of the Quotation is confirmed or the field &quot;Confirmed Quote in TL&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Stage_MIB</fullName>
        <active>false</active>
        <description>The opportunity Stage MIB can only set when one of the Quotation is confirmed</description>
        <errorConditionFormula>AND(NOT($User.ByPassValidation__c),ISCHANGED(StageName), ISPICKVAL(StageName,&quot;Money in the Bank&quot;), Confirmed_Quotation_Count__c &lt;1 )</errorConditionFormula>
        <errorMessage>The Opportunity Stage &quot; Money in the bank&quot; can only set when one of the Quotation  is confirmed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhotoBook_Sent_stage_Tracking_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($User.ByPassValidation__c),
ISPICKVAL(Photobook_Stage__c  , &quot;Sent&quot;),
OR( 
ISBLANK(PhotoBook_Tracking_Number__c)))</errorConditionFormula>
        <errorDisplayField>PhotoBook_Tracking_Number__c</errorDisplayField>
        <errorMessage>Please insert Tracking Number before you change the photo book stage to &apos;sent&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referral_Order_Tracking_Details_Included</fullName>
        <active>true</active>
        <description>&apos;Tracking number&apos; and &apos;which gift was sent&apos; must be included</description>
        <errorConditionFormula>AND(NOT($User.ByPassValidation__c),
ISPICKVAL(Gift_Sent_to_this_Opportunity_Referrer__c , &quot;Gift Sent&quot;),
OR(
ISBLANK(Gift_Tracking_Order_Details__c),
OR(
ISBLANK( Which_Gift_was_Sent__c ))))</errorConditionFormula>
        <errorDisplayField>Gift_Tracking_Order_Details__c</errorDisplayField>
        <errorMessage>Tracking number or delivery details must be included before confirming</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sale_Required</fullName>
        <active>true</active>
        <description>Need Sale figures entered before MITB</description>
        <errorConditionFormula>AND( NOT($User.ByPassValidation__c),ISPICKVAL( StageName , &apos;Closed Won Deal&apos;), ISBLANK(  Amount))</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Need Sale figures entered before MITB</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Request_Comments_Require</fullName>
        <active>false</active>
        <description>Add Date and Comments to the Support Service Description</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( Service_Level_Severity__c , &quot; ISBLANK(expression)&quot;)),(
ISBLANK(Support_Aservice_Description__c)))</errorConditionFormula>
        <errorDisplayField>Support_Aservice_Description__c</errorDisplayField>
        <errorMessage>Add Date and Comments to the Support Service Description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TravelEndDateShouldBeGreaterThanStartDat</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT($User.ByPassValidation__c),TravelEndDate__c &lt;  Arrival_Date__c )</errorConditionFormula>
        <errorDisplayField>TravelEndDate__c</errorDisplayField>
        <errorMessage>Travel End Date should be greater than Travel Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TravelStartDateShouldBeLessThanEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT($User.ByPassValidation__c),Arrival_Date__c &gt;   TravelEndDate__c  )</errorConditionFormula>
        <errorDisplayField>Arrival_Date__c</errorDisplayField>
        <errorMessage>Travel Start Date should be before Travel End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cos_Required</fullName>
        <active>true</active>
        <description>Need COST figures entered before MITB</description>
        <errorConditionFormula>AND( NOT($User.ByPassValidation__c),ISPICKVAL( StageName , &apos;Closed Won Deal&apos;), ISBLANK(  CoS__c))</errorConditionFormula>
        <errorDisplayField>CoS__c</errorDisplayField>
        <errorMessage>Need COST figures entered before MITB</errorMessage>
    </validationRules>
</CustomObject>